[project]
name = "rag-gis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bs4>=0.0.2",
    "db-sqlite3>=0.0.1",
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-huggingface>=0.3.0",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.5.3",
    "sentence-transformers>=5.0.0",
]
